.provarCaches/00D6C0000000xA6UAI/objects/LTS_Facility__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Cart_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>LTS Facilities</relationshipLabel>
        <relationshipName>LTS_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>LTS Facilities</relationshipLabel>
        <relationshipName>LTS_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>LTS Facilities</relationshipLabel>
        <relationshipName>LTS_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <label>Calendar Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Ship To Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent_Mission__c</fullName>
        <label>Independent Mission</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Email_Address__c</fullName>
        <label>Partner Admin Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Phone_Number__c</fullName>
        <label>Partner Admin Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>LTS Facility</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LTS-{00000}</displayFormat>
        <label>LTS Facility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LTS Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>